<resources>
    <string name="app_name">Bee Tracker</string>
    <string name="action_about">About</string>
    <string name="action_activity">General activity</string>
    <string name="action_add_hive">Add beehive</string>
    <string name="action_amount">Amount</string>
    <string name="action_delete">Remove</string>
    <string name="action_edit">Edit</string>
    <string name="action_food">Feeding</string>
    <string name="action_food_title">Food</string>
    <string name="action_harvest">Harvest</string>
    <string name="action_harvest_title">Combs collected</string>
    <string name="action_inspection">Inspection</string>
    <string name="action_recover">Undo?</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_hives">Sort beehives</string>
    <string name="action_treatment">Treatment</string>
    <string name="action_treatment_title">Medication</string>
    <string name="alert_delete_hive">Remove beehive</string>
    <string name="alert_exit_message">Dismiss changes?</string>
    <string name="card_date">Entry from the</string>
    <string name="card_hive_add">Add entry</string>
    <string name="card_hive_date">Last entry on </string>
    <string name="card_hive_more">more</string>
    <string name="card_temp">Weather</string>
    <string name="common_activity">General activity</string>
    <string name="common_diaper">Stickyboard</string>
    <string name="common_fence">Queen excluder</string>
    <string name="common_escape">Bee escape</string>
    <string name="common_stock">Box</string>
    <string name="date_format">MMMM d, yyyy</string>
    <string name="dialog_export_open_file">Open after exporting</string>
    <string name="dialog_export_send_mail">Send as email</string>
    <string name="dialog_export_xls_title">Export</string>
    <string name="dialog_temp_condition">Weather</string>
    <string name="dialog_temp_temp">Temperature</string>
    <string name="dialog_temp_title">Edit weather</string>
    <string name="easter_egg">I am a bee \\o/</string>
    <string name="easter_egg_activated">I am already a bee :)</string>
    <string name="easter_egg_counter">I am flying</string>
    <string name="error">An error has occurred</string>
    <string name="error_et">Required</string>
    <string name="export_address_hint">Email address</string>
    <string name="export_filename">Filename:</string>
    <string name="export_filename_default">RecordCard</string>
    <string name="export_food">Feeding with %1$s</string>
    <string name="export_harvest">Harvest of %1$s</string>
    <string name="export_treatment">Treatment with %1$s</string>
    <string name="filter_date">Filter date</string>
    <string name="filter_date_from">From</string>
    <string name="filter_date_till">Till</string>
    <string name="hive_offspring">Nuc</string>
    <string name="hive_queen">Queen</string>
    <string name="home_empty_message">No bee colonies added yet</string>
    <string name="inspection_brood">Brood</string>
    <string name="inspection_note">Note</string>
    <string name="inspection_queen">Queen bee</string>
    <string name="inspection_queenless">Queen cell</string>
    <string name="inspection_title">Inspection</string>
    <string name="inspection_varroa">Mite drop</string>
    <string name="inspection_varroa_unit">mites/day</string>
    <string name="inspection_weight">Weight of box</string>
    <string name="common_drone">Drone frame</string>
    <string name="common_empty">Empty frame</string>
    <string name="common_food">Food frame</string>
    <string name="common_middle">Super frame</string>
    <string name="log_empty_message">No entries added</string>
    <string name="menu_add_common">Activity</string>
    <string name="menu_add_food">Feeding</string>
    <string name="menu_add_harvest">Harvest</string>
    <string name="menu_add_inspection">Inspection</string>
    <string name="menu_add_treatment">Treatment</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit_hive">Edit beehive</string>
    <string name="menu_filter_date">Filter date</string>
    <string name="permission_location_rationale">To get your current weather condition we have to locate your device.</string>
    <string name="prefs_about_feedback">Send feedback</string>
    <string name="prefs_about_more">More from OliGon Creations</string>
    <string name="prefs_about_rate">Rate this app</string>
    <string name="prefs_about_title_sub">Copyright OliGon Creations / Jonas Menken 2016</string>
    <string name="prefs_about_version">Version</string>
    <string name="prefs_cat_content">Select lists</string>
    <string name="prefs_cat_export">Export</string>
    <string name="prefs_cat_user">Beekeeper information</string>
    <string name="prefs_content_food">Food</string>
    <string name="prefs_content_treatment">Medications</string>
    <string name="prefs_export_xls_summary">Save record card as .xls-file</string>
    <string name="prefs_export_xls_title">Export Excel-Sheet</string>
    <string name="prefs_premium_donate">Small donation to support the developer</string>
    <string name="prefs_premium_donate_title">Donation</string>
    <string name="prefs_premium_purchase_summary">Activate new feature with single payment</string>
    <string name="prefs_premium_purchase_title">Unlock premium features</string>
    <string name="prefs_premium_purchased">You are already Premium user</string>
    <string name="prefs_premium_purchased_summary">Thanks!</string>
    <string name="prefs_premium_title">Premium User</string>
    <string name="prefs_user_id">Registration</string>
    <string name="prefs_user_mail">Email address</string>
    <string name="prefs_user_mail_summary">Used for sending record cards</string>
    <string name="prefs_user_name">Name</string>
    <string name="prefs_user_summary">Used for the record cards</string>
    <string name="premium_purchased">Premium unlocked</string>
    <string name="title_activity_about">About Bee Tracker</string>
    <string name="title_activity_new">Add entry</string>
    <string name="weather_temp_default" translatable="false">- °C</string>
    <string name="inspection_weight_unit" translatable="false">kg</string>
    <string name="minus" translatable="false">-</string>
    <string name="zero" translatable="false">0</string>
    <string name="plus" translatable="false">+</string>
    <string name="content_list_add">Add to list</string>
    <string name="content_image_weather">Weather condition</string>
    <string name="hint_hive_name">Name</string>
    <string name="hint_hive_position">Location</string>
    <string name="hint_hive_year">Year</string>
    <string name="hint_hive_marker">Marker</string>
    <string name="hint_hive_info">Additional Informations</string>
    <string name="dialog_title_hive">Beehive</string>
    <string name="error_msg_name">Name is required</string>
    <string name="dialog_premium_purchase_message">Unlock premium features, like exporting your log to a excel-sheet (more coming soon), with a single purchase.</string>
    <string name="hint_common_other">Others</string>
    <string name="prefs_content_activities">Other Activities</string>
    <string name="error_msg_year">Valid year required</string>
    <string name="dialog_title_rating">Rate hive</string>
    <string name="menu_rate">Rate</string>
    <string name="alert_discard_add_entry">Dismiss new entry?</string>
    <string name="prefs_entry_added">Entry added</string>
    <string name="action_add">Add</string>
    <string name="prefs_export_backup_title">Backup / Restore</string>
    <string name="prefs_export_backup_summary">Backup / Restore all data</string>
    <string name="prefs_general_rating_view">Ratingsview</string>
    <string name="prefs_cat_general">General</string>
    <plurals name="harvest_text">
        <item quantity="one">%1$s Honig aus einer Wabe</item>
        <item quantity="other">%1$s Honig aus %2$s Waben</item>
    </plurals>
    <string name="rating_gentle">Gentleness</string>
    <string name="dialog_export_backup_title">Backup</string>
    <string name="inspection_pins">Pins</string>
    <string name="dialog_export_warning">BeeTracker-Databases have to be located under \"Bienen Tracker\". Restoring of not compatible databases can cause problems.</string>
    <string name="export_backup">backup</string>
    <string name="error_msg_backup_error">Backup failed</string>
    <string name="successfully_restored">Restore successful</string>
    <string name="last_backup">Last backup:\n%1$s</string>
    <string name="no_backup">No backup\navailable</string>
    <string name="alert_restore_db">Restore database? Current data will be lost.</string>
    <string name="alert_delete_db">Delete database?</string>
    <string name="action_send">Send</string>
    <string name="action_restore">Restore</string>
    <string name="rating_strength">Inclination to swarm</string>
    <string name="rating_swarm">Comb-solidity</string>
    <string name="c" translatable="false">°C</string>
    <string name="common_honey">Honeyroom</string>
    <string name="common_brood">Brood frame</string>
    <string name="dialog_title_reminder">Reminder</string>
    <string name="hint_reminder_description">Description</string>
    <string name="time_format" translatable="false">HH:mm</string>
    <string name="prefs_content_reminders">Reminders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_statistics">Statistics</string>
    <string name="nav_all">All Hives</string>
    <string name="nav_groups">Groups</string>
    <string name="prefs_content_groups">Groups</string>
    <string name="no_group">No group</string>
    <string name="nav_no_groups">edit in settings</string>
    <string name="action_logout">Logout</string>
    <string name="header_login">Login</string>
    <string name="header_premium">Premium necessary</string>
    <string name="header_login_msg">Login with Google</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="statistics_groups">Groups</string>
    <string name="statistics_range">Period</string>
    <string name="statistics_earnings">Total earnings: %1$skg</string>
    <string name="statistics_trend_title">Trend</string>
    <string name="statistics_food_title">Food</string>
    <string name="statistics_no_data">No data</string>
    <string name="prefs_premium_statistics_summary">Durch In-App-Kauf freischalten</string>
    <string name="prefs_premium_statistics_title">Statistics</string>
    <string name="statistics_purchased">Buy statistics package</string>
    <string name="hive_group">Group</string>
    <string name="dialog_premium_statistics_message">Unlock the statistics-package. You receive statistics for your earnings and investments in bee food.</string>
    <string name="others">Others</string>
    <string name="statistics_tab_earnings">Earnings</string>
    <string name="statistics_tab_food">Food</string>
    <string name="statistics_tab_sting">Bee stings</string>
    <string name="statistics_sting">Bee sting counter</string>
    <string name="dialog_sort_title">Sort</string>
    <string name="prefs_statistics_purchased">You are a statistician</string>
    <string name="sync_dialog_message">New data found in the cloud. Overwrite data on this device?</string>
    <string name="sync_dialog_title">Synchronization</string>
    <string name="signin_dialog_title" translatable="false">Disclaimer</string>
    <string name="signin_dialog_message">With Google sign-in you enable a continuous cloud sync. To prevent data loss when switching devices, you should wait at least 5 minutes</string>
    <string name="sync_dialog_error_message">There is a new app version available. Please update.</string>
    <string name="sync_dialog_error_title">Error</string>
</resources>