<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_export_xls_title"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimary" />

    <CheckBox
        android:id="@+id/cbExportSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/dialog_export_send_mail" />

    <EditText
        android:id="@+id/etExportAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:hint="@string/export_address_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/export_filename"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:inputType="text"
        android:id="@+id/etExportFilename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/export_filename_default" />

    <CheckBox
        android:id="@+id/cbExportOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/dialog_export_open_file" />


</LinearLayout>