<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dialog_title_rating"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rating_gentle"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rating_gentle"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating_swarm"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rating_escape"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:numStars="5"
        android:stepSize="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating_strength"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rating_strength"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:numStars="5"
        android:stepSize="0.5" />
</LinearLayout>